# rango

./: .gitignore  CMakeLists.txt  Project.cpp  README.md  activity.hpp  environment.hpp  item.hpp  rango.cpp  rango.hpp
.github/workflows/: build-windows.yml  cmake-multi-platform.yml
GUI/: Login.html  bird_info.html  cat_info.html  dog_info.html  home.html
HTTP/: index.html  server.hpp
HTTP/PROTECTED/Azeem/: UserData.XML
HTTP/pages/: access_denied.html  home.html  profile.html  testfile.html
HTTP/scripts/: ProfilePage.js  inserter.js
HTTP/styles/: standard.css
Server/: server.hpp
libraries/: activity.hpp  environment.hpp  errorCodes.hpp  gaming.hpp  item.hpp  pets.hpp  unitTests.hpp  users.hpp
